switch를 활용한 sub와 main헤더 구분

--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -30,4 +30,11 @@ header {
 			}
 		}
 	}
+	&.main {
+		background: transparent;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 2;
+	}
 }
