--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -1,40 +1,80 @@
 header {
 	width: 100%;
 	background: #222;
+
 	.inner {
 		width: 1180px;
-		max-width: 100%;
 		height: 80px;
-		margin: 0 auto;
+		margin: 0px auto;
 		position: relative;
+
 		h1 {
 			position: absolute;
 			bottom: 20px;
-			left: 0;
-		}
-		a {
-			font: bold 24px/1 'arial';
-			color: #fff;
-		}
-	}
-	#gnb {
-		position: absolute;
-		bottom: 0;
-		right: 0;
-		li {
-			float: left;
+			left: 0px;
+
 			a {
-				display: inline-block;
-				padding: 20px 30px;
-				font: bold 14px/1 'arial';
+				font: bold 24px/1 'arial';
+				color: #fff;
 			}
 		}
+
+		#gnb {
+			position: absolute;
+			bottom: 0px;
+			right: 0px;
+
+			li {
+				float: left;
+
+				a {
+					display: inline-block;
+					padding: 22px 30px;
+					font: bold 14px/1 'arial';
+					color: #fff;
+				}
+			}
+		}
+
+		.menuMo {
+			position: absolute;
+			right: 30px;
+			bottom: 20px;
+			font-size: 24px;
+			color: #fff;
+			display: none;
+		}
 	}
+
 	&.main {
 		background: transparent;
 		position: absolute;
-		top: 0;
-		left: 0;
+		top: 0px;
+		left: 0px;
 		z-index: 2;
 	}
+}
+
+//tablet
+@media screen and (max-width: $tablet) {
+	header {
+		.inner {
+			width: 100%;
+
+			h1 {
+				left: 30px;
+			}
+
+			#gnb {
+				display: none;
+			}
+			.menuMo {
+				display: block;
+			}
+		}
+	}
+}
+
+//m.p
+@media screen and (max-width: $mp) {
 }
