--- a/src/scss/sub/_department.scss
+++ b/src/scss/sub/_department.scss
@@ -2,4 +2,34 @@
 	figure {
 		background: #90c8ee;
 	}
+	.memberList {
+		&::after {
+			content: '';
+			display: block;
+			clear: both;
+		}
+		li {
+			float: left;
+			width: 25%;
+			padding: 10px;
+			.inner {
+				width: 100%;
+				border: 1px solid #bbb;
+				padding: 15px;
+				img {
+					width: 100%;
+				}
+				h2 {
+					margin-top: 15px;
+					margin-bottom: 10px;
+					font: bold 15px/1 'arial';
+					color: #555;
+				}
+				p {
+					font: 12px/1.2 'arial';
+					margin-bottom: 20px;
+				}
+			}
+		}
+	}
 }
