--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -13,7 +13,7 @@
 		position: relative;
 		opacity: 0;
 		transform: translateY(100px);
-		transition: 1s;
+		transition: opacity 1s, transform 1s;
 		h1 {
 			font: normal 30px/1 'arial';
 			color: #777;
