--- a/src/scss/sub/_community.scss
+++ b/src/scss/sub/_community.scss
@@ -3,3 +3,22 @@
 		background: lightgreen;
 	}
 }
+.inputBox {
+	width: 100%;
+	border: 1px solid #bbb;
+	padding: 50px;
+	margin-bottom: 50px;
+	input[type='text'] {
+		margin-bottom: 10px;
+	}
+}
+.showBox {
+	width: 100%;
+	border: 1px solid #bbb;
+	padding: 50px;
+	article {
+		background: #ddd;
+		margin-bottom: 20px;
+		padding: 30px;
+	}
+}
