--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,9 @@ $mp: 639px;
 //main
 @import 'main/visual';
 @import 'main/news';
+@import 'main/Pic';
+@import 'main/Vids';
+@import 'main/btns';
 
 //sub
 @import 'sub/department';
