--- a/src/scss/main/_Pic.scss
+++ b/src/scss/main/_Pic.scss
@@ -3,4 +3,9 @@
 	height: 100vh;
 	padding: 5vw;
 	background: lavender;
+	overflow: hidden;
+	h2 {
+		font: bold 200px/1 'arial';
+		color: rgba(0, 0, 0, 0.3);
+	}
 }
