--- a/src/scss/main/_Pic.scss
+++ b/src/scss/main/_Pic.scss
@@ -8,4 +8,10 @@
 		font: bold 200px/1 'arial';
 		color: rgba(0, 0, 0, 0.3);
 	}
+	p {
+		font: bold 130px/1 'arial';
+		color: rgba(0, 0, 0, 0.7);
+		position: relative;
+		top: -100px;
+	}
 }
