--- a/src/scss/common/_footer.scss
+++ b/src/scss/common/_footer.scss
@@ -12,6 +12,11 @@ footer {
 			text-align: center;
 			letter-spacing: 2px;
 		}
+		.members {
+			img {
+				width: 50px;
+			}
+		}
 	}
 }
 //tablet
