더미데이터들 메인화면에 뿌리기

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@ $mp: 639px;
 @import 'main/news';
 @import 'main/Pic';
 @import 'main/Vids';
+@import 'main/member';
 @import 'main/btns';
 
 //sub
