--- a/src/scss/common/_popup.scss
+++ b/src/scss/common/_popup.scss
@@ -12,12 +12,16 @@
 		height: 100%;
 		border: 1px solid #ccc;
 		position: relative;
-		img,
 		iframe,
 		video {
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
+		}
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
 		}
 		.close {
 			font: 14px/1 'arial';
