--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -1,11 +1,19 @@
 .content {
-	// figure {
-	// 	width: 100%;
-	// 	height: 300px;
-	// 	background: #bbb;
-	// 	opacity: 0;
-	// 	transition: 1s;
-	// }
+	figure {
+		width: 100%;
+		height: 300px;
+		background: #bbb;
+		opacity: 0;
+		transition: 1s;
+		background-size: cover;
+		background-position: center;
+		padding: 0;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
 	> .inner {
 		width: 1180px;
 		min-height: 400px;
