--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -10,14 +10,14 @@ figure {
 		overflow: visible;
 		.swiper-slide {
 			width: 100%;
-			background: aqua;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			font-size: 50px;
-			transform: scale(0.8);
 			transition: 1s;
 			opacity: 0.7;
+			overflow: hidden;
+			video {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
 		}
 		.swiper-slide-active {
 			transform: scale(1);
